--- a/index.html
+++ b/index.html
@@ -72,67 +72,100 @@
         </div>
     </nav>
 
-<!-- Hero Section -->
+    <!-- Hero Section with Enhanced Structure -->
+<!-- Update your hero section with this structure -->
 <section id="hero" class="hero-section">
+    <div id="particles-js"></div>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-6 hero-content">
-                <div class="hero-badge animate__animated animate__fadeIn">
-                    <span>Full Stack Developer</span>
-                </div>
-                <h1 class="hero-title animate__animated animate__fadeInUp">
-                    <span class="wave-emoji">👋</span> Hi, I'm <span class="text-gradient">Nicolette Mashaba</span>
-                </h1>
-                <h2 class="hero-subtitle animate__animated animate__fadeInUp animate__delay-1s">
-                    Building digital experiences that <span class="typing-text"></span>
-                </h2>
-                <p class="hero-description animate__animated animate__fadeInUp animate__delay-2s">
-                    I architect and develop full-stack web applications with a focus on performance, 
-                    accessibility, and cutting-edge technologies. Currently enhancing my skills in 
-                    cloud computing and AI integration.
-                </p>
-                <div class="hero-cta animate__animated animate__fadeInUp animate__delay-3s">
-                    <a href="#projects" class="btn btn-primary me-3" id="view-work-btn">
-                        View My Work <i class="fas fa-arrow-right"></i>
-                    </a>
-                    <a href="#contact" class="btn btn-outline" id="connect-btn">
-                        Let's Connect <i class="fas fa-paper-plane"></i>
-                    </a>
-                </div>
-                <div class="hero-social animate__animated animate__fadeInUp animate__delay-4s">
-                    <a href="https://github.com/NickiMash17" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/nicolette-mashaba-b094a5221/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a href="https://twitter.com/m_neyi" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com/reney_717" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                </div>
-            </div>
             <div class="col-lg-6">
-                <div class="tech-icons">
-                    <div class="icon react" data-tooltip="React">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">
+                <div class="hero-content">
+                    <div class="hero-badge">
+                        <span>Full Stack Developer</span>
                     </div>
-                    <div class="icon node" data-tooltip="Node.js">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js">
+                    <h1 class="hero-title">
+                        <span class="wave-emoji">👋</span> Hi, I'm <span class="text-gradient">Nicolette Mashaba</span>
+                    </h1>
+                    <h2 class="hero-subtitle">
+                        Building digital experiences that <span class="typing-text"></span>
+                    </h2>
+                    <p class="hero-description">
+                        I architect and develop full-stack web applications with a focus on performance, 
+                        accessibility, and cutting-edge technologies. Currently enhancing my skills in 
+                        cloud computing and AI integration.
+                    </p>
+                    <div class="hero-cta">
+                        <a href="#projects" class="btn btn-primary" id="viewWorkBtn">
+                            View My Work <i class="fas fa-arrow-right"></i>
+                        </a>
+                        <a href="#contact" class="btn btn-outline" id="connectBtn">
+                            Let's Connect <i class="fas fa-paper-plane"></i>
+                        </a>
                     </div>
-                    <div class="icon js" data-tooltip="JavaScript">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
-                    </div>
-                    <div class="icon aws" data-tooltip="AWS">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="AWS">
+                    <div class="hero-social">
+                        <a href="https://github.com/NickiMash17" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/nicolette-mashaba-b094a5221/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://twitter.com/m_neyi" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com/reney_717" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="col-lg-6 position-relative">
+                <div class="hero-image-wrapper">
+                    <div class="profile-image-container">
+                        <img src="images/myself.jpg" alt="Nicolette Mashaba" class="profile-image">
+                        <div class="profile-glow"></div>
+                        <div class="tech-icons">
+                            <!-- Your tech icons here -->
+                            <div class="tech-icons">
+                                <div class="icon react" data-tooltip="React">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">
+                                </div>
+                                <div class="icon node" data-tooltip="Node.js">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js">
+                                </div>
+                                <div class="icon js" data-tooltip="JavaScript">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+                                </div>
+                                <div class="icon azure" data-tooltip="Azure">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/azure/azure-original.svg" alt="Azure">
+                                </div>
+                                <div class="icon typescript" data-tooltip="TypeScript">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript">
+                                </div>
+                                <div class="icon mongodb" data-tooltip="MongoDB">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    
+    <!-- Animated scroll indicator -->
+    <div class="scroll-indicator">
+        <a href="#about" aria-label="Scroll down">
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
+            <div class="arrow">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </a>
     </div>
 </section>
+    
 
     <!-- About Section -->
     <section id="about" class="about-section">
@@ -511,7 +544,22 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div><div class="tab-pane fade" id="learning" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="skill-card">
+                                            <div class="skill-icon">
+                                                <img src="assets/icons/azure.svg" alt="Azure">
+                                            </div>
+                                            <div class="skill-info">
+                                                <h4>Microsoft Azure</h4>
+                                                <p>Cloud infrastructure and services on Microsoft's platform</p>
+                                                <div class="skill-progress">
+                                                    <div class="progress-bar learning" style="width: 65%"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                             <div class="col-md-6">
                                 <div class="skill-card">
                                     <div class="skill-icon">
