--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                         <div class="col-md-6">
                             <div class="skill-card">
                                 <div class="skill-icon">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Tailwind CSS">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS">
                                 </div>
                                 <div class="skill-info">
                                     <h4>Tailwind CSS</h4>
@@ -534,7 +534,7 @@
                         <div class="col-md-6">
                             <div class="skill-card">
                                 <div class="skill-icon">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="AWS">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS">
                                 </div>
                                 <div class="skill-info">
                                     <h4>AWS</h4>
