--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         <a href="https://www.linkedin.com/in/nicolette-mashaba-b094a5221/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://twitter.com/m_neyi" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
+                        <a href="https://www.tiktok.com/@renicmash" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
+                            <i class="fab fa-tiktok"></i>
                         </a>
                         <a href="https://www.instagram.com/reney_717" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
@@ -951,8 +951,8 @@
                             <a href="https://www.linkedin.com/in/nicolette-mashaba-b094a5221/" target="_blank" aria-label="LinkedIn">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="https://twitter.com/m_neyi" target="_blank" aria-label="Twitter">
-                                <i class="fab fa-twitter"></i>
+                            <a href="https://www.tiktok.com/@renicmash" target="_blank" aria-label="TikTok">
+                                <i class="fab fa-tiktok"></i>
                             </a>
                             <a href="https://www.instagram.com/reney_717" target="_blank" aria-label="Instagram">
                                 <i class="fab fa-instagram"></i>
@@ -1024,7 +1024,7 @@
                         <h4>Connect</h4>
                         <ul>
                             <li><a href="https://www.linkedin.com/in/nicolette-mashaba-b094a5221/" target="_blank">LinkedIn</a></li>
-                            <li><a href="https://twitter.com/m_neyi" target="_blank">Twitter</a></li>
+                            <li><a href="https://www.tiktok.com/@renicmash" target="_blank">TikTok</a></li>
                             <li><a href="https://www.instagram.com/reney_717" target="_blank">Instagram</a></li>
                             <li><a href="https://github.com/NickiMash17" target="_blank">GitHub</a></li>
                         </ul>
