--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Location</h4>
-                            <span>Johannesburg, South Africa</span>
+                            <span>Polokwane, South Africa</span>
                         </div>
                     </div>
                     
@@ -938,7 +938,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Phone</h4>
-                            <a href="tel:+1234567890">+27 12 345 6789</a>
+                            <a href="tel:+1234567890">+27 63 152 6795</a>
                         </div>
                     </div>
                     
