added more images

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                                     </p>
                                 </div>
                                 <div class="testimonial-author">
-                                    <img src="images/client1.jpg" alt="Client" class="author-image">
+                                    <img src="images/jane.jpg" alt="Client" class="author-image">
                                     <div class="author-info">
                                         <h4>Sarah Johnson</h4>
                                         <span>CEO, TechStart Inc.</span>
@@ -868,7 +868,7 @@
                                     </p>
                                 </div>
                                 <div class="testimonial-author">
-                                    <img src="images/client2.jpg" alt="Client" class="author-image">
+                                    <img src="images/john.jpg" alt="Client" class="author-image">
                                     <div class="author-info">
                                         <h4>Michael Brown</h4>
                                         <span>Marketing Director, Retail Corp</span>
@@ -891,7 +891,7 @@
                                     </p>
                                 </div>
                                 <div class="testimonial-author">
-                                    <img src="images/client3.jpg" alt="Client" class="author-image">
+                                    <img src="images/micheal.jpg" alt="Client" class="author-image">
                                     <div class="author-info">
                                         <h4>David Wilson</h4>
                                         <span>CTO, FinTech Solutions</span>
